Closed Bug 1901126 Opened 4 months ago Closed 3 months ago

Table border overflows off the start edge of its container (potentially being clipped), with 'border-collapse: collapse`

Categories

(Core :: Layout: Tables, defect)

defect

Tracking

()

VERIFIED FIXED
129 Branch
Tracking Status
firefox129 --- verified
firefox130 --- verified

People

(Reporter: dholbert, Assigned: dshin)

References

Details

(Keywords: parity-chrome)

Attachments

(3 files)

Attached file testcase 1

STR:

  1. Load attached testcase (based on dshin's "generalized case" attachment in bug 1434366

EXPECTED RESULTS:
Black border should not be covered up. (The black-bordered area should be large enough to contain all of the colorful borders inside of it.)

ACTUAL RESULTS:
Black border is covered up.

Gecko/WebKit give ACTUAL RESULTS. Blink gives EXPECTED RESULTS. Blink is probably correct per dshin's analysis in bug 1434366 comment 12.

Severity: -- → S3
Blocks: 1901133
Assignee: nobody → dshin
Status: NEW → ASSIGNED

Resets were added due to issues that statefulness brings (See Bug 1871609).
When a table-edge cell is modified, the resultant table-edge border width
may or may not be depemndent on that cell (As an unmodified cell could
have the maximum border width).

Depends on D213792

Attachment #9407550 - Attachment description: Bug 1901126: Inline sides border of a border-collapsed table depends on the maximum border width of the cell along that side. r=#layout-reviewers → Bug 1901126: Stop considering border inline-sides' widths from only the first row. r=#layout-reviewers
Pushed by dshin@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a9f54d932c4f Stop considering border inline-sides' widths from only the first row. r=dholbert https://hg.mozilla.org/integration/autoland/rev/e2a229e4c776 Invalidate along the entire table edge when a cell in the edge of the table is modified. r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 3 months ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch
Duplicate of this bug: 1901133

Reproducible on a 2024-06-10 Nightly build on Windows 10.
Verified as fixed on Firefox 129.0b2 and Firefox Nightly 130.0a1 on Windows 10, macOS 14, Ubuntu 22.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: