Bug 1901126: Invalidate along the entire table edge when a cell in the edge of the table is modified. r=dholbert

Every time we recompute border collapsed table borders, we discard previously
computed values. This is done to avoid statefulness bugs, like Bug 1871609.
When a table-edge cell is modified, the border computation needs to extend
to cover all cells adjacent to that edge, to determine which cell contributes
to the maximum border-width.

Also, rename the use of X/Y usage to Col/Row to reduce potential confusion.

Differential Revision: https://phabricator.services.mozilla.com/D213793